--- a/random_forest.ipynb
+++ b/random_forest.ipynb
@@ -816,7 +816,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#score is 0.78468"
+   ]
   }
  ],
  "metadata": {
